--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -17,7 +17,7 @@
             メンバー名
       .right-header
         .right-header__button
-          Edit
+          %a{href:''}Edit
     .messages
       = render @messages
       .message
