--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -17,7 +17,8 @@
             メンバー名
       .right-header
         .right-header__button
-        = link_to "Edit", :back, class: 'btn'
+        = link_to edit_group_path(@group.id) do
+          Edit     
     .messages
       = render @messages
       .message
