--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,51 +5,21 @@
   .chat
     .header
       .left-header
-        .left-header__title
-          グループ名
+        .left-header__title{data: {group: @group.id}}
+          = @group.name
         %ul.left-header__members
           Member：
-          %li.member
-            メンバー名
-          %li.member
-            メンバー名
-          %li.member
-            メンバー名
+          - @group.users.each do |user|
+            = user.name
       .right-header
         .right-header__button
         = link_to edit_group_path(@group.id) do
           Edit     
     .messages
       = render @messages
-      .message
-        .upper-message
-          .upper-message__user-name
-            メンバー
-          .upper-message__date
-            2017/04/04
-        .lower-meesage
-          .lower-message__content
-            メッセージ
-      .message
-        .upper-message
-          .upper-message__user-name
-            メンバー
-          .upper-message__date
-            2017/04/04
-        .lower-meesage
-          .lower-message__content
-            メッセージ
-      .message
-        .upper-message
-          .upper-message__user-name
-            メンバー
-          .upper-message__date
-            2017/04/04
-        .lower-meesage
-          .lower-message__content
-            メッセージ
+      
     .form
-      = form_for [@group, @message] do |f|
+      = form_for [@group, @message], html: {id: "new-message"} do |f|
         = f.text_field :content, class: 'form__message', placeholder: 'type a message'
         .form__mask
           = f.label :image, class: 'form__mask__image' do
